# agent-orderbook-simulation

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_AgentLatency.cpp  benchmark_OrderLatency.cpp  benchmark_Simulation.cpp
include/: Agent.h  AgentManager.h  AgentStrategy.h  AgentStrategyFactory.h  CalenderQueue.h  FixedDeque.h  FlatHashMap.h  MatchingEngine.h  Order.h  OrderDispatcher.h  OrderPool.h  Orderbook.h  PriceLevel.h  RingBuffer.h  SingleThreadRingBuffer.h  Trade.h  TradeDispatcher.h
src/: Agent.cpp  AgentManager.cpp  AgentStrategy.cpp  MatchingEngine.cpp  OrderDispatcher.cpp  Orderbook.cpp  TradeDispatcher.cpp  main.cpp
